<resources>
    <string name="app_name">公交查询</string>
    <string name="start_location_name">起始位置：</string>
    <string name="end_location_name">终点位置：</string>
    <string name="search_btn_name">查询</string>
    <string name="dim_key_hint">地点</string>
    <string name="search_path_name">公交：</string>
    <string name="search_station_name">公交站点：</string>
    <string name="nextline_name">上下行</string>
    <string name="search_histor">搜索历史</string>
</resources>
